Update tests to use ModelFactory